force-app/main/default/objects/Account/fields/Admin_for_DD365_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Admin_for_DD365_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin for DD365 Configuration</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>DD365_Admin_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>