force-app/main/default/objects/Account/fields/Assigned_Business_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Business_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Business Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BRM_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>