force-app/main/default/objects/Account/fields/Assigned_District_Parts_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_District_Parts_Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned District Parts Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DPSM_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>