force-app/main/default/objects/Account/fields/Assigned_District_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_District_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned District Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DSM_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>