force-app/main/default/objects/Account/fields/Assigned_Field_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Field_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Field Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FOM_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>