force-app/main/default/objects/Account/fields/Assigned_Retail_Development_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Retail_Development_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Retail Development Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RDM_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>