force-app/main/default/objects/Account/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <label>CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVV</fullName>
            </value>
            <value>
                <fullName>CarResearch</fullName>
            </value>
            <value>
                <fullName>DealerSocket</fullName>
            </value>
            <value>
                <fullName>DriveCentric</fullName>
            </value>
            <value>
                <fullName>eLeads</fullName>
            </value>
            <value>
                <fullName>ReyRey Contact Mgmt.</fullName>
            </value>
            <value>
                <fullName>TddsIlm</fullName>
            </value>
            <value>
                <fullName>Tekion</fullName>
            </value>
            <value>
                <fullName>VinSolutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>