force-app/main/default/objects/Account/fields/Desking_Tool__c.field-meta.xml
<CustomField>
    <fullName>Desking_Tool__c</fullName>
    <label>Desking Tool</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affinitiv</fullName>
            </value>
            <value>
                <fullName>AutoMate</fullName>
            </value>
            <value>
                <fullName>AutoNation</fullName>
            </value>
            <value>
                <fullName>CarResearch</fullName>
            </value>
            <value>
                <fullName>CDK</fullName>
            </value>
            <value>
                <fullName>DealerSocket</fullName>
            </value>
            <value>
                <fullName>Dealertrack</fullName>
            </value>
            <value>
                <fullName>DriveCentric</fullName>
            </value>
            <value>
                <fullName>eLeads</fullName>
            </value>
            <value>
                <fullName>Era Ignite</fullName>
            </value>
            <value>
                <fullName>First Pencil</fullName>
            </value>
            <value>
                <fullName>Mac Haik Proprietary</fullName>
            </value>
            <value>
                <fullName>Penske</fullName>
            </value>
            <value>
                <fullName>Reynolds Power</fullName>
            </value>
            <value>
                <fullName>Tekion</fullName>
            </value>
            <value>
                <fullName>VinSolutions</fullName>
            </value>
            <value>
                <fullName>XRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>