force-app/main/default/objects/Account/fields/Digital_Retail_Tool__c.field-meta.xml
<CustomField>
    <fullName>Digital_Retail_Tool__c</fullName>
    <label>Digital Retail Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoFi</fullName>
            </value>
            <value>
                <fullName>CarNow</fullName>
            </value>
            <value>
                <fullName>Darwin Automotive</fullName>
            </value>
            <value>
                <fullName>Dealer.com</fullName>
            </value>
            <value>
                <fullName>Dealer eProcess</fullName>
            </value>
            <value>
                <fullName>Dealer Inspire</fullName>
            </value>
            <value>
                <fullName>DealerOn</fullName>
            </value>
            <value>
                <fullName>Gubagoo</fullName>
            </value>
            <value>
                <fullName>Roadster</fullName>
            </value>
            <value>
                <fullName>SmartPath</fullName>
            </value>
            <value>
                <fullName>Upstart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>