force-app/main/default/objects/Account/fields/DMS__c.field-meta.xml
<CustomField>
    <fullName>DMS__c</fullName>
    <label>DMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoMate</fullName>
            </value>
            <value>
                <fullName>AutoSoft</fullName>
            </value>
            <value>
                <fullName>CDK</fullName>
            </value>
            <value>
                <fullName>DealerTrack</fullName>
            </value>
            <value>
                <fullName>PBS Systems</fullName>
            </value>
            <value>
                <fullName>R&amp;R</fullName>
            </value>
            <value>
                <fullName>Tekion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>