force-app/main/default/objects/Account/fields/Inventory_Management_System__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Management_System__c</fullName>
    <label>Inventory Management System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACV Max</fullName>
            </value>
            <value>
                <fullName>AutoMate</fullName>
            </value>
            <value>
                <fullName>AutoVision</fullName>
            </value>
            <value>
                <fullName>Dealer.com</fullName>
            </value>
            <value>
                <fullName>Dealers Link</fullName>
            </value>
            <value>
                <fullName>Dealer Specialties</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>eLeads</fullName>
            </value>
            <value>
                <fullName>Fastbook</fullName>
            </value>
            <value>
                <fullName>First Look Max</fullName>
            </value>
            <value>
                <fullName>HomeNet</fullName>
            </value>
            <value>
                <fullName>Max Digital</fullName>
            </value>
            <value>
                <fullName>Moran Group</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>vAuto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>