force-app/main/default/objects/Account/fields/Marketing_Agency__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Agency__c</fullName>
    <label>Marketing Agency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>????</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>