force-app/main/default/objects/Account/fields/Non_Certified_Tool__c.field-meta.xml
<CustomField>
    <fullName>Non_Certified_Tool__c</fullName>
    <label>Non-Certified Tool</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoHub</fullName>
            </value>
            <value>
                <fullName>Cap One</fullName>
            </value>
            <value>
                <fullName>Carfax</fullName>
            </value>
            <value>
                <fullName>Drive Centric</fullName>
            </value>
            <value>
                <fullName>Driveo</fullName>
            </value>
            <value>
                <fullName>Impel AI</fullName>
            </value>
            <value>
                <fullName>Matador</fullName>
            </value>
            <value>
                <fullName>TradePending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>