force-app/main/default/objects/Account/fields/Non_Certified_Tool_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Non_Certified_Tool_Submission_Status__c</fullName>
    <label>Non-Certified Tool - Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region Request Form Completed</fullName>
            </value>
            <value>
                <fullName>Dealer Acknowledgement Completed</fullName>
            </value>
            <value>
                <fullName>Non-Cert Tool Website Active</fullName>
            </value>
            <value>
                <fullName>GTM Approval Received</fullName>
            </value>
            <value>
                <fullName>GTM Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>