force-app/main/default/objects/Account/fields/Op_Codes_and_Labor_Time__c.field-meta.xml
<CustomField>
    <fullName>Op_Codes_and_Labor_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Op Codes and Labor Time</label>
    <type>Checkbox</type>
</CustomField>