force-app/main/default/objects/Account/fields/Open_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Open_Tickets__c</fullName>
    <label>Open Tickets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>