force-app/main/default/objects/Account/fields/Parts_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Parts_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Invoice</label>
    <type>Checkbox</type>
</CustomField>