force-app/main/default/objects/Account/fields/Parts_Order__c.field-meta.xml
<CustomField>
    <fullName>Parts_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Order</label>
    <type>Checkbox</type>
</CustomField>