force-app/main/default/objects/Account/fields/PEN_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>PEN_Provider_ID__c</fullName>
    <label>PEN &amp; Provider ID</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>????</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>