force-app/main/default/objects/Account/fields/RTI_Real_Time_Inventory__c.field-meta.xml
<CustomField>
    <fullName>RTI_Real_Time_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RTI Real Time Inventory</label>
    <type>Checkbox</type>
</CustomField>