force-app/main/default/objects/Account/fields/SmartPath_Push_To_Desking__c.field-meta.xml
<CustomField>
    <fullName>SmartPath_Push_To_Desking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartPath Push To Desking</label>
    <type>Checkbox</type>
</CustomField>