force-app/main/default/objects/Account/fields/Trade_Tool__c.field-meta.xml
<CustomField>
    <fullName>Trade_Tool__c</fullName>
    <label>Trade Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KBB ICO</fullName>
            </value>
            <value>
                <fullName>KBB InfoDriver</fullName>
            </value>
            <value>
                <fullName>TradePending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>