force-app/main/default/objects/Account/fields/TSP_Account_TDAP_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>TSP_Account_TDAP_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TSP | Account TDAP Opt-In</label>
    <type>Checkbox</type>
</CustomField>