force-app/main/default/objects/Account/fields/Warranty_Payment__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Payment</label>
    <type>Checkbox</type>
</CustomField>