force-app/main/default/objects/Account/fields/Website_Provider__c.field-meta.xml
<CustomField>
    <fullName>Website_Provider__c</fullName>
    <label>Website Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoGo</fullName>
            </value>
            <value>
                <fullName>Dealer.com</fullName>
            </value>
            <value>
                <fullName>Dealer Alchemist</fullName>
            </value>
            <value>
                <fullName>Dealer eProcess</fullName>
            </value>
            <value>
                <fullName>DealerInspire</fullName>
            </value>
            <value>
                <fullName>DealerOn</fullName>
            </value>
            <value>
                <fullName>Team Velocity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>