force-app/main/default/objects/Account/fields/Website_Provider_SmartPath_Website_Opt__c.field-meta.xml
<CustomField>
    <fullName>Website_Provider_SmartPath_Website_Opt__c</fullName>
    <label>Website Provider | SmartPath Website Opt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>