force-app/main/default/objects/Account/fields/Website_Provider_Unlock_Savings__c.field-meta.xml
<CustomField>
    <fullName>Website_Provider_Unlock_Savings__c</fullName>
    <label>Website Provider | Unlock Savings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>